--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 
+<div class="head">
+
+<img src="/resources/images/main/main_renewal/top_logo_s.jpg">
+
+</div>
+
 </body>
 </html>
