--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -8,7 +8,10 @@
 
 <div class="head">
 
-<img src="/resources/images/main/main_renewal/top_logo_s.jpg">
+<!-- <img src="/resources/images/main/main_renewal/top_logo_s.jpg"> -->
+
+	<p>커뮤니티</p>
+	<p>2만 수료생과 함께하는 KH정보교육원의 다양한 소식을 만나보세요.</p>
 
 </div>
 
