YB - 230224 - 중간 글자 정렬

--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -3,12 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>커뮤니티</title>
+
+<style type="text/css">
+
+div p {
+	text-align: center;
+	
+}
+
+</style>
+
+
 </head>
 <body>
 
-<div class="head">
-
-<!-- <img src="/resources/images/main/main_renewal/top_logo_s.jpg"> -->
+<div class="fixed">
 
 	<p>커뮤니티</p>
 	<p>2만 수료생과 함께하는 KH정보교육원의 다양한 소식을 만나보세요.</p>
