--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -3,8 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+.class{
+	
+}
+
+</style>
 </head>
 <body>
+
+<div>
+	
+	<p class="sub_title">KH이야기</p>
+	<p class="sub title_text">KH정보교육원 소식을 알려드립니다.</p>
+	<table class="table">
+		<tr>
+			<td>
+			<img src="./jpg/1-1.jpg">
+			</td>
+			<td><img src="./jpg/1-2.jpg"></td>
+			<td><img src="./jpg/1-3.jpg"></td>
+			<td><img src="./jpg/1-4.jpg"></td>
+		</tr>
+		
+		<!--  -->
+		
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+			<td>4</td>
+		</tr>
+		
+		<!--  -->
+		
+		<tr>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+			<td>4</td>
+		</tr>
+			
+	</table>
+
+	<div></div>
+</div>
 
 </body>
 </html>
