--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -19,8 +19,12 @@
 	<table class="table">
 		<tr>
 			<td>
+			<a href="https://www.khacademy.co.kr/community/noticeView.kh?no=3537&cpage=1&classify=">
 			<img src="./jpg/1-1.jpg">
+			<span>2023.02.10</span>
+			<span>K-디지컬기초역량 훈련이란?</span>
 			</td>
+			</a>
 			<td><img src="./jpg/1-2.jpg"></td>
 			<td><img src="./jpg/1-3.jpg"></td>
 			<td><img src="./jpg/1-4.jpg"></td>
@@ -29,23 +33,24 @@
 		<!--  -->
 		
 		<tr>
-			<td>1</td>
-			<td>2</td>
-			<td>3</td>
-			<td>4</td>
+			<td><img src="./jpg/2-1.jpg"></td>
+			<td><img src="./jpg/2-2.jpg"></td>
+			<td><img src="./jpg/2-3.jpg"></td>
+			<td><img src="./jpg/2-4.jpg"></td>
 		</tr>
 		
 		<!--  -->
 		
 		<tr>
-			<td>1</td>
-			<td>2</td>
-			<td>3</td>
-			<td>4</td>
+			<td><img src="./jpg/3-1.jpg"></td>
+			<td><img src="./jpg/3-2.jpg"></td>
+			<td><img src="./jpg/3-3.jpg"></td>
+			<td><img src="./jpg/3-4.jpg"></td>
 		</tr>
 			
 	</table>
-
+	
+	
 	<div></div>
 </div>
 
