--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -3,8 +3,75 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+#bottom > div{
+	width:1130px;
+	height: 206px;
+	margin: 0 auto;
+
+}
+hr{
+	margin: 0;
+}
+#bottom_nav > div{
+	float: left
+}
+#nav_tel {
+	width: 278.2px;
+	height: 100%;
+	position : relative;
+	text-align: left;
+	
+ }
+#nav_bqu1{
+	border: 1px solid black;
+	
+}
+
+#tel_icon img{
+	float: left;
+	margin-right: 13px;
+}
+#tel_icon {
+	width: 173px;
+	margin: 0 auto;
+	margin-top: 44px;
+}
+p{
+	width : 190px;
+	margin : 0;
+	padding: 0;
+	font-size: 14px;
+	white-space: nowrap;
+}
+</style>
 </head>
 <body>
 
+
+<div id="bottom">
+<div id="bottom_nav">
+<div id="nav_tel">
+<div id="tel_icon">
+<img alt="" src="./image/bottom_phone_icon.png">
+<p>KH정보교육원<br>전국대표 문의전화</p>
+</div>
+</div>
+<div id="nav_bqu1"></div>
+<div id="nav_bqu2"></div>
+<div id="nav_bqu3"></div>
+
+</div>
+<hr>
+<div id="bottom_emblem">
+
+</div>
+<hr>
+<div id="bottom_info">
+
+</div>
+
+
+</div>
 </body>
 </html>
