--- a/webtest/src/main/webapp/web.html
+++ b/webtest/src/main/webapp/web.html
@@ -8,7 +8,28 @@
 
 div p {
 	text-align: center;
-	
+}
+
+ul {
+	list-style-type:none;
+	padding: 0;
+	margin:0;
+
+}
+
+ul.menu > li {
+
+	float: left;
+	list-style-type:none;
+ 	margin-top: 50px;
+	padding: 20px;
+
+}
+
+img {
+	position: absolute;
+	left: 40%;
+
 }
 
 </style>
@@ -19,10 +40,51 @@ div p {
 
 <div class="fixed">
 
-	<p>커뮤니티</p>
-	<p>2만 수료생과 함께하는 KH정보교육원의 다양한 소식을 만나보세요.</p>
-
+	<div id="main head">
+	
+		<img src="file:///C:/Users/user1/git/top_logo_s.jpg">
+	
+	</div>
+	
 </div>
+
+<ul class="menu">
+
+	<li>
+		<a href="">국비지원과정</a>
+		
+		<ul>
+			<li><a href="">웹디자이너</a></li>
+			<li><a href="">웹퍼블리셔</a></li>
+			<li><a href="">웹개발자</a></li>
+			<li><a href="">웹엔지니어</a></li>
+		</ul>
+		
+	</li>
+	
+	<li>
+		<a href="">교육원소개</a>
+		<ul>
+		
+			<li><a href="">공지사항</a></li>
+			<li><a href="">자유게시판</a></li>
+		
+		</ul>
+	</li>
+	
+	<li><a href="">취업지원센터</a></li>
+	
+	<li><a href="">채용정보</a></li>
+	
+	<li><a href="">프로젝트</a></li>
+	
+	<li><a href="">커뮤니티</a></li>
+	
+	<li><a href="">산학연계</a></li>
+		
+
+</ul>
+
 
 </body>
 </html>
